--- a/basics/index.html
+++ b/basics/index.html
@@ -19,14 +19,16 @@
     <h2>Events in Action</h2>
     <button v-on:click="add(5)">Add</button>
     <button v-on:click.right="reduce(5)">Subtract</button>
-    <p v-once>Starting Counter: {{ counter }}</p>
+    <!-- <p v-once>Starting Counter: {{ counter }}</p> -->
     <p>Result: {{ counter }}</p>
-    <input type="text" v-on:input="setName($event, 'Rahman')" v-on:keyup.enter="confirmName">
-    <p>Your Name: {{ confirmedName }}</p>
-    <form v-on:submit.prevent="submitForm">
+    <!-- <input type="text" v-bind:value="name" v-on:input="setName($event, 'Rahman')" v-on:keyup.enter="confirmName"> -->
+    <input type="text" v-model="name">
+    <button v-on:click="resetInput">Reset Input</button>
+    <p>Your Name: {{ fullname }}</p>
+    <!-- <form v-on:submit.prevent="submitForm">
       <input type="text">
       <button>Sign Up</button>
-    </form>
+    </form> -->
   </section>
 </body>
 
