--- a/basics/index.html
+++ b/basics/index.html
@@ -17,13 +17,15 @@
   </header>
   <section id="events">
     <h2>Events in Action</h2>
-    <button v-on:click="add(5)">Add</button>
-    <button v-on:click.right="reduce(5)">Subtract</button>
+    <button @click="add(5)">Add</button> <!-- @ is Short-hand for v-on -->
+    <!--v-bind:value can be used instead of :value-->
+    <button @click.right="reduce(5)">Subtract</button>
     <!-- <p v-once>Starting Counter: {{ counter }}</p> -->
     <p>Result: {{ counter }}</p>
     <!-- <input type="text" v-bind:value="name" v-on:input="setName($event, 'Rahman')" v-on:keyup.enter="confirmName"> -->
     <input type="text" v-model="name">
-    <button v-on:click="resetInput">Reset Input</button>
+    <input type="text" v-model="lastName">
+    <button @click="resetInput">Reset Input</button>
     <p>Your Name: {{ fullname }}</p>
     <!-- <form v-on:submit.prevent="submitForm">
       <input type="text">
